<resources>
    <string name="app_name">RayTask</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="action_login">Log In</string>
    <string name="action_register">Register</string>
    <string name="menu_tasks">Tasks</string>
    <string name="menu_add_task">Add Task</string>
    <string name="menu_profile">Profile</string>
    <string name="task_due_date">Due Date</string>
    <string name="task_priority">Priority</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_complete">Mark Complete</string>
    <string name="notification_channel_name">Task Reminders</string>
    <string name="notification_channel_description">Notifications for task reminders</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="due_date">Due Date</string>
    <string name="priority">Priority</string>
    <string name="mark_as_completed">Mark as completed</string>
    <string name="save_task">Save Task</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Description</string>
    <string name="my_tasks">My Tasks</string>
    <string name="active">Active</string>
    <string name="completed">Completed</string>
    <string name="all">All</string>
    <string name="no_tasks">No Tasks</string>

    <!-- Activity titles -->
    <string name="title_activity_main">Task List</string>
    <string name="title_activity_detail">Task Details</string>
    <string name="title_activity_login">Login</string>

    <!-- Navigation labels -->
    <string name="navigation_tasks">Tasks</string>
    <string name="navigation_add_task">Add Task</string>
    <string name="navigation_profile">Profile</string>

    <!-- Buttons -->
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>

    <!-- Other strings -->
    <string name="high_priority">High</string>
    <string name="medium_priority">Medium</string>
    <string name="low_priority">Low</string>


    <string name="delete_task_title">Delete Task</string>
    <string name="delete_task_message">Are you sure you want to delete this task?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="task_deleted">Task deleted</string>
    <string name="task_not_found">Task not found</string>
    <string name="delete_task_error">Error deleting task: %1$s</string>
</resources>